[project]
name = "ai-services-bpom"
version = "0.1.0"
description = "AI Services API untuk sistem kepegawaian BPOM menggunakan FastAPI dan LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "python-dotenv>=1.2.1",
    "langchain-core>=1.2.17",
    "langchain-openai>=1.1.10",
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
    "langchain-anthropic>=1.4.0",
    "psycopg2-binary>=2.9.11",
    "strands-agents[openai]>=1.35.0",
    "strands-agents-tools>=0.4.1",
    "strands-agents-builder>=0.1.10",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "locust>=2.43.3",
    "poethepoet>=0.43.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
]

[tool.poe.tasks]
dev = "fastapi dev main.py --port 8080"
start = "fastapi run main.py --port 8080"
prod = "fastapi run main.py --port 8080 --workers 5"
test = "pytest"
check = "ruff check ."
format = "ruff format ."

# Alembic migration tasks
migrate = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
migrate-down-all = "alembic downgrade base"
migration-history = "alembic history"
migration-current = "alembic current"

[tool.poe.tasks.migration-new]
help = "Create new migration from model changes"
shell = "alembic revision --autogenerate -m \"$message\""

[tool.poe.tasks.migration-new.args]
message = { default = "auto migration", positional = true, multiple = true }

[tool.poe.tasks.migration-new-empty]
help = "Create empty migration file"
shell = "alembic revision -m \"$message\""

[tool.poe.tasks.migration-new-empty.args]
message = { default = "empty migration", positional = true, multiple = true }
